Anpassungen Ansicht Mobile

--- a/index.html
+++ b/index.html
@@ -55,10 +55,6 @@
             
             <p>Unsere Plattform, ist eine digitale Schnittstelle, die es erm&ouml;glicht, die Ladepunkte privater Haushalte und Unternehmen in einem vernetzten System zu verbinden. <br>
                 Diese Plattform schafft nicht nur eine zus&auml;tzliche Einnahmequelle f&uuml;r Ladestationseigent&uuml;mer:innen, sondern erweitert auch erheblich die Verf&uuml;gbarkeit von Ladem&ouml;glichkeiten f&uuml;r Elektrofahrzeuge.</p>
-           <!--
-           <a href="#">Compare</a>
-           <a href="#" class="bulb"><i class="ri-lightbulb-flash-line"></i>bulb</a>
-           -->
          </div>
 
         <div class="logo-img">
@@ -149,7 +145,7 @@
     <section class="partner">
         <div id="partner" class="text">
                 <h4>Partner</h4><br>
-                <a class="fh" href="https://www.fh-burgenland.at/"  target="_blank">FH Burgenland</a> 
+                <a class="fh" href="https://www.fh-burgenland.at/"  target="_blank">FH&nbsp;Burgenland</a> 
                 
                 </div>
     </section>
@@ -160,7 +156,7 @@
 
     <div class="icons">
         <a href="tel:000000000"><i class="ri-phone-line"></i></a>
-        <a href="mailto:2210635005@fh-burgenland.at"><i class="ri-mail-line"></i></a>
+        <a href="mailto:chargebuddy@fh-burgenland.at"><i class="ri-mail-line"></i></a>
     </div>
 
     <div class="scroll-down">
