Fehler bei der Ansicht

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
             <h4>Die e-sharing Plattform</h4><br>
             <p>Mit ChargeBuddy werdem private Haushalte und Unternehmen mit eigenen Ladesäulen in die bestehende Ladeinfrastruktur integriert.<br><br>
                 Über unsere Plattform werden mehrere Schlüsselfunktionen angeboten: <br><br>
-                **1. Abrechnungsdienste:**<br>
+                 1. Abrechnungsdienste:<br>
                    - Die Plattform ermöglicht eine transparente und effiziente Abrechnung zwischen den Betreibern von Ladestationen (private Haushalte oder Unternehmen) und den Nutzern. Dies gewährleistet eine faire Entlohnung für den bereitgestellten Strom.<br><br>
-                **2. Bereitstellung von Ladeslots bei Privathaushalten:**<br>
+                 2. Bereitstellung von Ladeslots bei Privathaushalten:<br>
                    - Private Haushalte haben die Möglichkeit, ihre Ladestationen über die Plattform für andere Nutzer zugänglich zu machen. Dies schafft eine erweiterte Verfügbarkeit von Lademöglichkeiten und fördert die Effizienz der bestehenden Ladeinfrastruktur.<br><br>
-                **3. Lesegerät zur Stromabrechnung via App:**<br>
+                 3. Lesegerät zur Stromabrechnung via App:<br>
                    - Um den Verbrauch und die Nutzung der Ladestationen genau zu erfassen, senden wir Lesegeräte an die teilnehmenden Haushalte. Diese Geräte ermöglichen es den Nutzern, den verbrauchten Strom über eine App abzulesen und bieten Transparenz und Kontrolle über die Stromkosten. <br><br>
-                **Bedingungen:**<br>
-                **1. Zeitbasiertes Modell:**<br>
+                Bedingungen:<br>
+                 1. Zeitbasiertes Modell:**<br>
                    - Die Abrechnung erfolgt auf Basis der tatsächlichen Nutzungsdauer der Ladestation. Nutzer zahlen demnach nur für die Zeit, in der sie die Ladestation tatsächlich verwenden.<br><br>
-                **2. Wallbox/Ladestation:**<br>
+                 2. Wallbox/Ladestation:**<br>
                    - Die teilnehmenden Haushalte und Unternehmen müssen über eine kompatible Wallbox oder Ladestation verfügen, um an der Plattform teilnehmen zu können. Dies gewährleistet, dass die bereitgestellten Ladepunkte den erforderlichen Standards entsprechen.<br>
                  Diese innovative Plattform schafft eine Win-Win-Situation, indem sie einerseits zusätzliche Einnahmequellen für Besitzer von Ladestationen schafft und andererseits die Zugänglichkeit zu Lademöglichkeiten für Elektrofahrzeuge erweitert. <br>Durch die Integration von Abrechnungsdiensten und einer transparenten, zeitbasierten Preisstruktur wird eine nachhaltige und effiziente Nutzung der Ladeinfrastruktur gefördert.<br><br>
                 </p>
